--- a/http_server/app/templates/puller/puller.html
+++ b/http_server/app/templates/puller/puller.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta charset="utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>直播助手</title>
-    <!--
-    <title>Form Elements - Ace Admin</title>
-    -->
     <meta name="description" content="Cloud Media"/>
-    <!--
-    <meta name="description" content="Common form elements and layouts"/>
-    -->
-    <!--
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-    -->
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    {% block header %}
-    {% endblock %}
 
     {% set mirror_site = '' %}
     <!-- bootstrap & fontawesome -->
@@ -62,6 +50,15 @@
     <script src="{{ mirror_site }}/static/assets/js/html5shiv.min.js"></script>
     <script src="{{ mirror_site }}/static/assets/js/respond.min.js"></script>
     <![endif]-->
+
+    <style type="text/css">
+	body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
+	#allmap{width:100%;height:500px;}
+	p{margin-left:5px; font-size:14px;}
+
+    </style>
+    <script type="text/javascript"
+            src="http://api.map.baidu.com/api?v=2.0&ak=SBMwGhsPVie6UHSO6GnjN4VKpdjThHyG"></script>
 
     <!-- [Ali player] -->
     <link rel="stylesheet" href="//g.alicdn.com/de/prismplayer/2.6.0/skins/default/aliplayer-min.css"/>
@@ -137,7 +134,6 @@
             ace.settings.loadState('main-container')
         } catch (e) {
         }
-
     </script>
 
     <div id="sidebar" class="sidebar responsive ace-save-state">
@@ -146,7 +142,6 @@
                 ace.settings.loadState('sidebar')
             } catch (e) {
             }
-
         </script>
 
         <ul class="nav nav-list">
@@ -161,7 +156,7 @@
                 <b class="arrow"></b>
 
                 <ul class="submenu">
-                    <li class="active">
+                    <li class="">
                         <a href="#">
                             <i class="menu-icon fa fa-caret-right"></i>
                             A123456
@@ -192,7 +187,7 @@
                 <b class="arrow"></b>
 
                 <ul class="submenu">
-                    <li class="active">
+                    <li class="">
                         <a href="#">
                             <i class="menu-icon fa fa-user fa-caret-right"></i>
                             A123456
@@ -217,37 +212,59 @@
     <div class="main-content">
         <div class="main-content-inner">
             <div class="page-content">
-                <div class="prism-player" id="J_prismPlayer" style="position: absolute"></div>
-                <script>
-            var player = new Aliplayer({
-            id: 'J_prismPlayer',
-            width: '100%',
-            autoplay: false,
-            //支持播放地址播放,此播放优先级最高
-            source : '播放url',
-            //播放方式二：点播用户推荐
-            vid : '1e067a2831b641db90d570b6480fbc40',
-            playauth : '',
-            cover: 'http://liveroom-img.oss-cn-qingdao.aliyuncs.com/logo.png',
-            //播放方式三：仅MPS用户使用
-            vid : '1e067a2831b641db90d570b6480fbc40',
-            accId: '',
-            accSecret: '',
-            stsToken: '',
-            domainRegion: '',
-            authInfo: '',
-            //播放方式四：使用STS方式播放
-            vid : '1e067a2831b641db90d570b6480fbc40',
-            accessKeyId: '',
-            securityToken: '',
-            accessKeySecret: ''
-            },function(player){
-                console.log('播放器创建好了。')
-           });
-
-                </script>
-
-            </div><!-- /.page-content -->
+                <div class="row">
+                    <div style="position:relative;" class="col-sm-6">
+                        <img src="static/assets/images/gallery/image-1.jpg" width="605px" height="600px"/>
+                        <div style="position:absolute; z-index:2; left:20%; top:20%" class="panel panel-primary">
+                            <div class="panel-heading">发起直播</div>
+                            <div class="panel-body">
+                                <div>
+                                    <label for="number" class="control-label no-padding-right">通道：</label>
+                                    <select name="number" id="number">
+                                        <option value=1 selected="selected">0
+                                        </option>
+                                        <option value=1>1</option>
+                                        <option value=1>2</option>
+                                        <option value=1>3</option>
+                                        <option value=1>4</option>
+                                        <option value=1>5</option>
+                                        <option value=1>6</option>
+                                    </select>
+                                </div>
+                                <br>
+                                <div>
+                                    <label class="control-label no-padding-right">质量：</label>
+                                    <label>
+                                        <input name="quality" type="radio" checked="checked" class="ace input-lg"
+                                               value="low"/>
+                                        <span class="lbl"> &nbsp;流畅优先 </span>
+                                    </label>
+                                    &nbsp;&nbsp;
+                                    <label>
+                                        <input name="quality" type="radio" class="ace input-lg" value="medium"/>
+                                        <span class="lbl"> &nbsp;一般 </span>
+                                    </label>
+                                    &nbsp;&nbsp;
+                                    <label>
+                                        <input name="quality" type="radio" class="ace input-lg" value="high"/>
+                                        <span class="lbl"> &nbsp;高清 </span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="panel-footer">
+                                <div class="clearfix" style="text-align:center">
+                                    <button name="live" type="live" id="live"
+                                            class="btn btn-sm btn-primary">
+                                        <i class="ace-icon fa"></i>
+                                        <span class="bigger-110">启动直播</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="width:600px;height:600px;;border:#ccc solid 1px;float:right" id="allmap"></div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -319,8 +336,24 @@
 <!-- ace scripts -->
 <script src="{{ mirror_site }}/static/assets/js/ace-elements.min.js"></script>
 <script src="{{ mirror_site }}/static/assets/js/ace.min.js"></script>
-
-{% block script %}
-{% endblock %}
 </body>
 </html>
+
+<script type="text/javascript">
+    var baidumap = new BMap.Map("allmap");
+	var point = new BMap.Point(121.6032242955, 31.2475034682);
+	var marker = new BMap.Marker(point);  // 创建标注
+	baidumap.addOverlay(marker);              // 将标注添加到地图中
+	baidumap.centerAndZoom(point, 15);
+	var opts = {
+	  width : 200,     // 信息窗口宽度
+	  height: 100,     // 信息窗口高度
+	  title : "联芯科技有限公司" , // 信息窗口标题
+	  enableMessage:true,//设置允许信息窗发送短息
+	  message:"HELLO"
+	}
+	var infoWindow = new BMap.InfoWindow("地址：上海浦东新区明月路1258号 大唐电信产业园", opts);  // 创建信息窗口对象
+	//marker.addEventListener("click", function(){
+	baidumap.openInfoWindow(infoWindow,point); //开启信息窗口
+	//});
+</script>
