--- a/http_server/app/templates/user/puller.html
+++ b/http_server/app/templates/user/puller.html
@@ -51,18 +51,19 @@
     <script src="{{ mirror_site }}/static/assets/js/respond.min.js"></script>
     <![endif]-->
 
+    <!-- [Baidu Map] -->
     <style type="text/css">
 	body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
 	#allmap{width:100%;height:500px;}
 	p{margin-left:5px; font-size:14px;}
-
     </style>
     <script type="text/javascript"
             src="http://api.map.baidu.com/api?v=2.0&ak=SBMwGhsPVie6UHSO6GnjN4VKpdjThHyG"></script>
+    <!-- [end] -->
 
     <!-- [Ali player] -->
-    <link rel="stylesheet" href="//g.alicdn.com/de/prismplayer/2.6.0/skins/default/aliplayer-min.css"/>
-    <script type="text/javascript" src="//g.alicdn.com/de/prismplayer/2.6.0/aliplayer-min.js"></script>
+    <link rel="stylesheet" href="//g.alicdn.com/de/prismplayer/2.7.1/skins/default/aliplayer-min.css"/>
+    <script type="text/javascript" src="//g.alicdn.com/de/prismplayer/2.7.1/aliplayer-min.js"></script>
     <!-- [end] -->
 </head>
 
@@ -125,7 +126,7 @@
                 </li>
             </ul>
         </div>
-    </div><!-- /.navbar-container -->
+    </div>
 </div>
 
 <div class="main-container ace-save-state" id="main-container">
@@ -156,8 +157,8 @@
                 <b class="arrow"></b>
 
                 <ul class="submenu">
-                    <li class="">
-                        <a href="#">
+                    <li class="active">
+                        <a href="{{ url_for('user.view', account='A123456') }}" target="_blank">
                             <i class="menu-icon fa fa-caret-right"></i>
                             A123456
                         </a>
@@ -166,7 +167,7 @@
                     </li>
 
                     <li class="">
-                        <a href="#">
+                        <a href="{{ url_for('user.view', account='A234567') }}" target="_blank">
                             <i class="menu-icon fa fa-caret-right"></i>
                             A234567
                         </a>
@@ -176,7 +177,7 @@
                 </ul>
             </li>
 
-            <li class="">
+            <li class="active">
                 <a href="#" class="dropdown-toggle">
                     <i class="menu-icon fa fa-group green"></i>
                     <span class="menu-text"> Leadcore </span>
@@ -188,7 +189,7 @@
 
                 <ul class="submenu">
                     <li class="">
-                        <a href="#">
+                        <a href="{{ url_for('user.view', account='A123456') }}" target="_blank">
                             <i class="menu-icon fa fa-user fa-caret-right"></i>
                             A123456
                         </a>
@@ -197,7 +198,7 @@
                     </li>
 
                     <li class="">
-                        <a href="#">
+                        <a href="{{ url_for('user.view', account='A234567') }}" target="_blank">
                             <i class="menu-icon fa fa-user fa-caret-right"></i>
                             A234567
                         </a>
@@ -212,55 +213,25 @@
     <div class="main-content">
         <div class="main-content-inner">
             <div class="page-content">
+                <div class="page-header">
+                    <h1>
+                        启动直播
+                        <small>
+                            <i class="ace-icon fa fa-angle-double-right"></i>
+                            A234567
+                        </small>
+                    </h1>
+                </div><!-- /.page-header -->
                 <div class="row">
                     <div style="position:relative;" class="col-sm-6">
-                        <img src="static/assets/images/gallery/image-1.jpg" width="605px" height="600px"/>
-                        <div style="position:absolute; z-index:2; left:20%; top:20%" class="panel panel-primary">
-                            <div class="panel-heading">发起直播</div>
-                            <div class="panel-body">
-                                <div>
-                                    <label for="number" class="control-label no-padding-right">通道：</label>
-                                    <select name="number" id="number">
-                                        <option value=1 selected="selected">0
-                                        </option>
-                                        <option value=1>1</option>
-                                        <option value=1>2</option>
-                                        <option value=1>3</option>
-                                        <option value=1>4</option>
-                                        <option value=1>5</option>
-                                        <option value=1>6</option>
-                                    </select>
-                                </div>
-                                <br>
-                                <div>
-                                    <label class="control-label no-padding-right">质量：</label>
-                                    <label>
-                                        <input name="quality" type="radio" checked="checked" class="ace input-lg"
-                                               value="low"/>
-                                        <span class="lbl"> &nbsp;流畅优先 </span>
-                                    </label>
-                                    &nbsp;&nbsp;
-                                    <label>
-                                        <input name="quality" type="radio" class="ace input-lg" value="medium"/>
-                                        <span class="lbl"> &nbsp;一般 </span>
-                                    </label>
-                                    &nbsp;&nbsp;
-                                    <label>
-                                        <input name="quality" type="radio" class="ace input-lg" value="high"/>
-                                        <span class="lbl"> &nbsp;高清 </span>
-                                    </label>
-                                </div>
+                        <div class="prism-player" id="J_prismPlayer"></div>
+                        <br>
+                        <center>
+                            <div style="position:absolute;left:0;right:0;margin:auto">
+                                <a class="btn btn-large btn-danger"
+                                   id="stoplive">停止直播</a>
                             </div>
-                            <div class="panel-footer">
-                                <div class="clearfix" style="text-align:center">
-                                    <button name="live" type="live" id="live"
-                                            class="btn btn-sm btn-primary">
-                                        <i class="ace-icon fa"></i>
-                                        <span class="bigger-110">启动直播</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+                        </center>
                     </div>
                     <div style="width:600px;height:600px;;border:#ccc solid 1px;float:right" id="allmap"></div>
                 </div>
@@ -340,7 +311,30 @@
 </html>
 
 <script type="text/javascript">
-    var baidumap = new BMap.Map("allmap");
+var player = new Aliplayer({
+    id: "J_prismPlayer",
+         autoplay: false,
+         isLive:true,
+         playsinline:false,
+         width:"100%",
+         height:"400px",
+         controlBarVisibility:"always",
+         useH5Prism:false,
+         useFlashPrism:false,
+         source:"//player.alicdn.com/video/aliyunmedia.mp4",
+         cover:"",
+         skinLayout:[{"name":"bigPlayButton","align":"blabs","x":30,"y":80},
+                {"name":"controlBar","align":"blabs","x":0,"y":0,"children":[{"name":"progress","align":"blabs","x":0,"y":44},
+                {"name":"fullScreenButton","align":"tr","x":10,"y":12},
+                {"name":"timeDisplay","align":"tl","x":10,"y":7},
+                {"name":"volume","align":"tr","x":5,"y":10},
+                {"name":"playButton","align":"tl","x":15,"y":12}]}]
+         },function(player){
+            console.log("播放器创建了。");
+          }
+    );
+
+var baidumap = new BMap.Map("allmap");
 	var point = new BMap.Point(121.6032242955, 31.2475034682);
 	var marker = new BMap.Marker(point);  // 创建标注
 	baidumap.addOverlay(marker);              // 将标注添加到地图中
@@ -353,7 +347,14 @@
 	  message:"HELLO"
 	}
 	var infoWindow = new BMap.InfoWindow("地址：上海浦东新区明月路1258号 大唐电信产业园", opts);  // 创建信息窗口对象
-	//marker.addEventListener("click", function(){
-	baidumap.openInfoWindow(infoWindow,point); //开启信息窗口
-	//});
+	marker.addEventListener("click", function(){
+	    baidumap.openInfoWindow(infoWindow,point); //开启信息窗口
+	});
+
+  jQuery(function ($) {
+      $("#stoplive").click(function(){
+          player.stop()
+          window.location.reload()
+      });
+  });
 </script>
