user manager:   1. UA profile

--- a/http_server/app/templates/user/puller.html
+++ b/http_server/app/templates/user/puller.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type; X-UA-Compatible" content="text/html; charset=utf-8"/>
     <title>直播助手</title>
     <meta name="description" content="Cloud Media"/>
     <meta name="viewport"
