--- a/http_server/app/templates/test/test_js.html
+++ b/http_server/app/templates/test/test_js.html
@@ -72,10 +72,10 @@
     <script src="static/assets/js/ace.min.js"></script>
 
 
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+    <!--script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script-->
     
     <script src="static/js/cmproxy.js"></script>
-    <!--script src="static/js/jsencrypt.min.js"></script-->
+    <script src="static/js/jsencrypt.min.js"></script>
 
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
