--- a/http_server/app/templates/user/player.html
+++ b/http_server/app/templates/user/player.html
@@ -79,6 +79,8 @@
                 </small>
             </a>
         </div>
+        <div id="curtime" class="navbar-header pull-right navbar-brand bigger-130">
+        </div>
     </div>
 </div>
 
@@ -200,9 +202,44 @@
 var player = null;
 
 $(function() {
+    getTime()
     createBaiduMap()
     player = createPlayer(null);
 })
+
+function getTime() {
+    var dateObj = new Date();
+
+    var year = dateObj.getFullYear();//年
+    var month = dateObj.getMonth()+1;//月  (注意：月份+1)
+    var date = dateObj.getDate();//日
+    var day = dateObj.getDay();
+    var weeks = ["星期日","星期一","星期二","星期三","星期四","星期五","星期六"];
+    var week = weeks[day];//根据day值，获取星期数组中的星期数。
+    var hours = dateObj.getHours();//小时
+    var minutes = dateObj.getMinutes();//分钟
+    var seconds = dateObj.getSeconds();//秒
+
+    if(month < 10) {
+        month = "0"+month;
+    }
+    if(date < 10) {
+        date = "0"+date;
+    }
+    if(hours < 10) {
+        hours = "0"+hours;
+    }
+    if(minutes < 10) {
+        minutes = "0"+minutes;
+    }
+    if(seconds < 10) {
+        seconds = "0"+seconds;
+    }
+
+    var newDate = year+"年"+month+"月"+date+"日"+"&nbsp"+week+"&nbsp &nbsp"+hours+":"+minutes+":"+seconds;
+    document.getElementById("curtime").innerHTML = newDate;//在div中写入时间
+    setTimeout('getTime()', 500);//每隔500ms执行一次getTime()
+}
 
 function startlive(source) {
     console.log(source)
@@ -273,5 +310,6 @@ function createBaiduMap() {
 	    map.openInfoWindow(infoWindow,point); //开启信息窗口
 	});
 }
+
 
 </script>
