--- a/http_server/app/templates/test/test_js.html
+++ b/http_server/app/templates/test/test_js.html
@@ -163,12 +163,11 @@
 
 
         $("#btn_login").click(function() {
-            cmproxy.login('A204931', '123456', function(msg) {
+            cmproxy.login('A491625', '123456', function(msg) {
                 console.log("this is in login's listener... when reply arrives!")
                 console.log(msg) 
                 jrpc = JSON.parse(msg)
                 console.log(jrpc["result"])
-                cmproxy.set_node_info(JSON.stringify(jrpc["result"]))
             });
         });
 
@@ -180,7 +179,7 @@
         });
 
         $("#btn_connect").click(function() {
-            cmproxy.connect(function(msg) {
+            cmproxy.connect("nick_test", "device_test", function(msg) {
                 console.log(msg) 
             });
         });
